--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>QickVote<br />
+											<h1>QuickVote<br />
 											</h1>
 											<p>An Online Voting App For Everyone</p>
 										</header>
