--- a/index.html
+++ b/index.html
@@ -53,35 +53,35 @@
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Erat lacinia</h2>
+										<h2>Advantages</h2>
 									</header>
 									<div class="features">
 										<article>
 											<span class="icon fa-gem"></span>
 											<div class="content">
-												<h3>Portitor ullamcorper</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>User-Friendly Interface</h3>
+												<p> Our voting app features an intuitive and easy-to-navigate interface. Whether you're a first-time voter or an experienced participant, you'll find it effortless to access and cast your vote.</p>
 											</div>
 										</article>
 										<article>
 											<span class="icon solid fa-paper-plane"></span>
 											<div class="content">
-												<h3>Sapien veroeros</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>Secure Account Creation</h3>
+												<p>To ensure the integrity of the voting process, you'll start by creating a secure account. We prioritize data privacy and take measures to protect your information.</p>
 											</div>
 										</article>
 										<article>
 											<span class="icon solid fa-rocket"></span>
 											<div class="content">
-												<h3>Quam lorem ipsum</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>Convenient Voting Options</h3>
+												<p>Experience the flexibility of casting your vote online from the comfort of your own device. Participate in elections without the need to visit physical polling stations.</p>
 											</div>
 										</article>
 										<article>
 											<span class="icon solid fa-signal"></span>
 											<div class="content">
-												<h3>Sed magna finibus</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>Secure and Transparent Voting</h3>
+												<p>We prioritize the security and transparency of our voting system. Our app utilizes robust encryption and anti-fraud measures to protect against any unauthorized activities.</p>
 											</div>
 										</article>
 									</div>
