--- a/elements.html
+++ b/elements.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Elements - Editorial by HTML5 UP</title>
+		<title>Documentation</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
+									<a href="https://widecity.in" class="logo"><strong>widecity</strong></a>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -35,23 +35,23 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-										<h1>Elements</h1>
+										<h1>Widecity</h1>
+										<h1>Documentations</h1>
 									</header>
 
 									<!-- Content -->
-										<h2 id="content">Sample Content</h2>
-										<p>Praesent ac adipiscing ullamcorper semper ut amet ac risus. Lorem sapien ut odio odio nunc. Ac adipiscing nibh porttitor erat risus justo adipiscing adipiscing amet placerat accumsan. Vis. Faucibus odio magna tempus adipiscing a non. In mi primis arcu ut non accumsan vivamus ac blandit adipiscing adipiscing arcu metus praesent turpis eu ac lacinia nunc ac commodo gravida adipiscing eget accumsan ac nunc adipiscing adipiscing lorem ipsum dolor sit amet nullam veroeros adipiscing.</p>
-										<div class="row">
-											<div class="col-6 col-12-small">
+										<h2 id="content"></h2>
+										<p>Documentation is important because it helps us remember, understand, and share information more easily. It acts like a written record or a guide that keeps valuable knowledge organized and accessible for ourselves and others. Without proper documentation, we may forget important details, struggle to explain things clearly, and find it challenging to collaborate effectively with others. So, by documenting things, we ensure that information is preserved, easily communicated, and can be used to learn, improve, and solve problems in the future.</p>	<div class="row">
+											<!-- <div class="col-6 col-12-small">
 												<h3>Sem turpis amet semper</h3>
 												<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat commodo eu sed ante lacinia. Sapien a lorem in integer ornare praesent commodo adipiscing arcu in massa commodo lorem accumsan at odio massa ac ac. Semper adipiscing varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
 											</div>
 											<div class="col-6 col-12-small">
 												<h3>Magna odio tempus commodo</h3>
 												<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor. Ante commodo blandit adipiscing integer semper orci eget. Faucibus commodo adipiscing mi eu nullam accumsan morbi arcu ornare odio mi adipiscing nascetur lacus ac interdum morbi accumsan vis mi accumsan.</p>
-											</div>
+											</div> -->
 											<!-- Break -->
-											<div class="col-4 col-12-medium">
+											<!-- <div class="col-4 col-12-medium">
 												<h3>Interdum sapien gravida</h3>
 												<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit.</p>
 											</div>
@@ -62,7 +62,7 @@
 											<div class="col-4 col-12-medium">
 												<h3>Accumsan montes viverra</h3>
 												<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit.</p>
-											</div>
+											</div> -->
 										</div>
 
 									<hr class="major" />
@@ -451,15 +451,15 @@ print 'It took ' + i + ' iterations to sort the deck.';
 
 							<!-- Menu -->
 								<nav id="menu">
-									<header class="major">
+									<!-- <header class="major">
 										<h2>PRODUCTS</h2>
-									</header>
+									</header> -->
 									<ul>
-<!--										<li><a href="index.html">Homepage</a></li>-->
-<!--										<li><a href="generic.html">Generic</a></li>-->
-<!--										<li><a href="elements.html">Elements</a></li>-->
+										<li><a href="elements.html">Home</a></li>
+										<li><a href="index.html">QuickVote</a></li>
+										<li><a href="generic.html">Academy</a></li>
 <!--										<li>-->
-											<span class="opener">QVote</span>
+											<!-- <span class="opener">QVote</span> -->
 <!--											<ul>-->
 <!--												<li><a href="#">Lorem Dolor</a></li>-->
 <!--												<li><a href="#">Ipsum Adipiscing</a></li>-->
