--- a/generic.html
+++ b/generic.html
@@ -80,15 +80,15 @@
 
 							<!-- Menu -->
 								<nav id="menu">
-									<header class="major">
+									<!-- <header class="major">
 										<h2>PRODUCTS</h2>
-									</header>
+									</header> -->
 									<ul>
-<!--										<li><a href="index.html">Homepage</a></li>-->
-<!--										<li><a href="generic.html">Generic</a></li>-->
-<!--										<li><a href="elements.html">Elements</a></li>-->
+										<li><a href="elements.html">Home</a></li>
+										<li><a href="index.html">QuickVote</a></li>
+										<li><a href="generic.html">Academy</a></li>
 <!--										<li>-->
-											<span class="opener">QVote</span>
+											<!-- <span class="opener">QVote</span> -->
 <!--											<ul>-->
 <!--												<li><a href="#">Lorem Dolor</a></li>-->
 <!--												<li><a href="#">Ipsum Adipiscing</a></li>-->
@@ -109,7 +109,7 @@
 <!--										</li>-->
 <!--										<li><a href="#">Maximus Erat</a></li>-->
 <!--										<li><a href="#">Sapien Mauris</a></li>-->
-<!--										<li><a href="#">Amet Lacinia</a></li>-->
+										<!-- <li><a href="#">Amet Lacinia</a></li> -->
 									</ul>
 								</nav>
 
