--- a/index.html
+++ b/index.html
@@ -162,37 +162,37 @@
 
 							<!-- Menu -->
 								<nav id="menu">
-									<header class="major">
+									<!-- <header class="major">
 										<h2>PRODUCTS</h2>
-									</header>
+									</header> -->
 									<ul>
-<!--										<li><a href="index.html">Homepage</a></li>-->
-<!--										<li><a href="generic.html">Generic</a></li>-->
-<!--										<li><a href="elements.html">Elements</a></li>-->
-<!--										<li>-->
+										<li><a href="elements.html">Home</a></li>
+										<li><a href="index.html">QuickVote</a></li>
+										<li><a href="generic.html">Academy</a></li>
+										<!-- <li>
 											<span class="opener">QVote</span>
-<!--											<ul>-->
-<!--												<li><a href="#">Lorem Dolor</a></li>-->
-<!--												<li><a href="#">Ipsum Adipiscing</a></li>-->
-<!--												<li><a href="#">Tempus Magna</a></li>-->
-<!--												<li><a href="#">Feugiat Veroeros</a></li>-->
-<!--											</ul>-->
-<!--										</li>-->
-<!--										<li><a href="#">Etiam Dolore</a></li>-->
-<!--										<li><a href="#">Adipiscing</a></li>-->
-<!--										<li>-->
-<!--											<span class="opener">Another Submenu</span>-->
-<!--											<ul>-->
-<!--												<li><a href="#">Lorem Dolor</a></li>-->
-<!--												<li><a href="#">Ipsum Adipiscing</a></li>-->
-<!--												<li><a href="#">Tempus Magna</a></li>-->
-<!--												<li><a href="#">Feugiat Veroeros</a></li>-->
-<!--											</ul>-->
-<!--										</li>-->
-<!--										<li><a href="#">Maximus Erat</a></li>-->
-<!--										<li><a href="#">Sapien Mauris</a></li>-->
-<!--										<li><a href="#">Amet Lacinia</a></li>-->
-									</ul>
+											<ul>
+												<li><a href="#">Lorem Dolor</a></li>
+												<li><a href="#">Ipsum Adipiscing</a></li>
+												<li><a href="#">Tempus Magna</a></li>
+												<li><a href="#">Feugiat Veroeros</a></li>
+											</ul>
+										</li>
+ 										<li><a href="#">Etiam Dolore</a></li>
+										<li><a href="#">Adipiscing</a></li>
+										<li>
+											<span class="opener">Another Submenu</span>
+											<ul>
+												<li><a href="#">Lorem Dolor</a></li>
+												<li><a href="#">Ipsum Adipiscing</a></li>
+												<li><a href="#">Tempus Magna</a></li>
+												<li><a href="#">Feugiat Veroeros</a></li>
+											</ul>
+										</li>
+										<li><a href="#">Maximus Erat</a></li>
+										<li><a href="#">Sapien Mauris</a></li>
+										<li><a href="#">Amet Lacinia</a></li>
+									</ul> -->
 								</nav>
 
 							<!-- Section -->
