--- a/elements.html
+++ b/elements.html
@@ -332,11 +332,11 @@
 													<h3>Image</h3>
 
 													<h4>Product Images</h4>
-													<span class="image fit"><img src="images/pic11.jpg" alt="" /></span>
+													<span class="image fit"><img src="images/academygp.png" alt="" /></span>
 													<div class="box alt">
 														<div class="row gtr-50 gtr-uniform">
-															<div class="col-4"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-															<div class="col-4"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
+															<div class="col-4"><span class="image fit"><img src="images/academygp.png" alt="" /></span></div>
+															<div class="col-4"><span class="image fit"><img src="images/quickvote.jpg" alt="" /></span></div>
 															<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
 															<!-- Break -->
 															<div class="col-4"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
