--- a/elements.html
+++ b/elements.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>Documentation</title>
+		<link rel="icon" href="/images/logo_white_72.png"/>		
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
