--- a/generic.html
+++ b/generic.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Generic - Editorial by HTML5 UP</title>
+		<title>Documentation</title>
+		<link rel="icon" href="/images/logo_white_72.png"/>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
