--- a/academy.html
+++ b/academy.html
@@ -82,9 +82,10 @@
 										<h2>PRODUCTS</h2>
 									</header> -->
 									<ul>
-										<li><a href="elements.html">Home</a></li>
-										<li><a href="index.html">QuickVote</a></li>
-										<li><a href="generic.html">Academy</a></li>
+										<li><a href="index.html">Home</a></li>
+										<li><a href="quickvote.html">QuickVote</a></li>
+										<li><a href="academy.html">Academy</a></li>
+										<li><a href="ACP.html">ACP</a></li>
 <!--										<li>-->
 											<!-- <span class="opener">QVote</span> -->
 <!--											<ul>-->
