--- a/ACP.html
+++ b/ACP.html
@@ -174,7 +174,7 @@ To connect an account, click Connect account. Enter your Instagram account's use
 											</p>
                                             	
 												<ol>
-													<li>Make your app live by adding 'https://www.termsfeed.com/live/db4fe74f-531b-465a-987e-83af4393c33a' to your app > app settings > privacy policy url
+													<li>Make your app live by adding <b>https://www.termsfeed.com/live/db4fe74f-531b-465a-987e-83af4393c33a</b> to your app > app settings > privacy policy url
 													</li>
 												</ol>
 												
